--- a/css/style.css
+++ b/css/style.css
@@ -41,8 +41,10 @@ body {
      left: 50%;
      transform: translate(-50%, -50%);
      width: 400px;
-     background-color: black;
-     border: 2px solid red;
+     padding: 40px;
+     padding-top: 75px;
+     border-radius: 25px;
+     background-color: rgb(127, 176, 255);
 }
 
 
@@ -51,7 +53,33 @@ body {
      font-size: 5rem;
      height: 80px;
      border: none;
+     background-color: white;
+     color: black;
+     text-align: right;
+     padding-right: 10px;
 }
-/******************************************
-/* ADDITIONAL STYLES
-/*******************************************/
+
+.calc-btns{
+     display: flex;
+     flex-direction: row;
+     flex-wrap: wrap;
+     padding: 15px;
+}
+
+button{
+     height: 60px;
+     background-color: white;
+     border: none;
+     border-radius: 30px;
+     font-size: 4rem;
+     font-weight: bold;
+     margin: 7px;
+     padding: 5px;
+     flex: 1 0 18%;
+}
+
+.clear-btn{ 
+     background-color: rgb(17, 175, 175);
+     color: white;
+     font-size: 3rem;
+}
